<resources>
    <string name="app_name">E_Commerce</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">946741176682-fc2kk9s1pq2bm08794cbtnc0m2vpjadq.apps.googleusercontent.com</string>
    <string name="don_t_have_an_account_sign_up">Don t have an account? <u>Sign Up</u></string>
    <string name="already_have_an_account_sign_in">Already have an account? <u>Sign In</u></string>
    <string name="back">back</string>
    <string name="profile_image">profile_image</string>
    <string name="profile_edit_image">profile_edit_image</string>
    <string name="user_name">User Name</string>
    <string name="profile">Profile</string>
    <string name="option_title">Option Title</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="user_data_description">Don\'t worry, only you can see your personal data. No one else will be able to see it.</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="gender">Gender</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="product_detail">Product Detail</string>
    <string name="select_size">Select Size</string>
    <string name="total_price">Total Price</string>
    <string name="product_image">product image</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="basket">Basket</string>
    <string name="start_payment">Start Payment</string>
    <string name="checkout">Checkout</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="change">CHANGE</string>
    <string name="order_list">Order List</string>
    <string name="save_card">Save Card</string>
    <string name="order">Order</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_condition">Terms Condition</string>
    <string name="agree_with">Agree with</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
</resources>