<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragment.ProfileFragment">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/tvProfileTitle"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvProfileTitle"
        app:layout_constraintWidth_percent="0.1"
        app:tint="@android:color/black" />

    <!-- Title -->

    <!-- Profile Image -->
    <TextView
        android:id="@+id/tvProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/profile_picture_dumy"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfileTitle"
        app:layout_constraintWidth_percent="0.3" />

    <!-- Edit Image Button -->
    <ImageButton
        android:id="@+id/btnEditImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/_3sdp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/profile_edit_image"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/ivProfileImage"
        app:layout_constraintEnd_toEndOf="@id/ivProfileImage"
        app:tint="@color/white" />

    <!-- Name -->
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user_name"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfileImage" />

    <!-- Profile Options List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfileOptions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        tools:itemCount="8"
        tools:listitem="@layout/item_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName" />

</androidx.constraintlayout.widget.ConstraintLayout>
