<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragment.PaymentFragment">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/headerLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1"
        app:tint="@android:color/black" />

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/basket"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Add Card"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Card view -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/creditcard"
        android:backgroundTint="#009688"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Card Holder Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCardHolderName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCardHolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Card Name"
            android:padding="12dp"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Card Number Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCardNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilCardHolderName"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="Card Number"
            android:padding="12dp"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Expiry Date (Month and Year) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilCardNumber"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilExpiryMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.48">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etExpiryMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="MM"
                android:inputType="date"
                android:padding="12dp"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilExpiryYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.48">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etExpiryYear"
                android:layout_width="match_parent"
                android:inputType="date"
                android:layout_height="wrap_content"
                android:hint="YYYY"
                android:padding="12dp"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- CVV Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCvv"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CVV"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:text="000" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Save Card Checkbox -->
    <CheckBox
        android:id="@+id/cbSaveCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_card"
        app:layout_constraintStart_toStartOf="@+id/tilCvv"
        app:layout_constraintTop_toBottomOf="@id/tilCvv" />

    <!-- Add Card Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_payment_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="12dp"
        android:text="@string/start_payment"
        android:textColor="@android:color/white"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbSaveCard"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>